2007-09-14  Helmut Eller  <heller@common-lisp.net>

	Some cleanups for the REPL.

	* slime.el (slime-repl-write-string): Split it up into smaller
	functions.
	(slime-repl-emit, slime-repl-emit-result)
	(slime-emit-string): New functions.

	(slime-repl-save-history): Use prin1 instead of pp.

	(repl-type-ahead): New test case.

2007-09-12  Christophe Rhodes  <csr21@cantab.net>

	Make ASDF:LOAD-OP (and SBCL REQUIRE) happy with swank.asd

	* swank.asd: Define and use a CL-SCRIPT-FILE class for loading as
	source, even with ASDF:LOAD-OP.

2007-09-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-loader.lisp: Aways compile-file `contrib/swank-asdf.lisp'
	on SBCL. This fixes "Undefined function" style-warnings when using
	`slime-asdf' in combination with SBCL. Reported by Cyrus Harmon.

	* swank-sbcl.lisp: Explicitly require ASDF. (While this is not
	strictly necessary, as it's implicitly loaded on requiring the
	other modules, I think it's better to be explicit about it.)

2007-09-10  Helmut Eller  <heller@common-lisp.net>

	Fix some bugs introduced while moving doc refs to contrib.

	* swank-sbcl.lisp (condition-references): It's still needed.

	* slime.el (sldb-dispatch-extras): Add missing quote.
	(slime-sbcl-manual-root): Move definition to
	contrib/slime-references.el.
	(slime-cl-symbol-name, slime-cl-symbol-package): Move to
	contrib/slime-parse.el.

2007-09-10  Helmut Eller  <heller@common-lisp.net>

	Move SBCL doc references to contrib.

	* slime.el (sldb-insert-condition): Merge REFERENCES and EXTRAS.
	(sldb-extras-hooks, sldb-dispatch-extras): New hook.

	* swank-backend.lisp (condition-references): Removed. Merged with
	condition-extras.

	* swank-sbcl.lisp (condition-references): Removed.
	(condition-extras): Include references.
	(externalize-reference): New function.  Don't return plain
	symbols.

	* swank-allegro.lisp (condition-references): Removed.

2007-09-10  Tobias C. Rittweiler  <tcr@freebits.de>
