@@ -1,3 +1,11 @@
+2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* slime.el (slime-split-string): New semi-portability function.
+	The behaviour of `split-string' changed between Emacs21 and
+	Emacs22. Thanks to Christophe Rhodes for reporting this.
+	(slime-file-name-merge-source-root): Use `slime-split-string'.
+	(slime-highlight-differences-in-dirname): Likewise.
+
 2007-09-14  Helmut Eller  <heller@common-lisp.net>
 
 	Some cleanups for the REPL.
